# master-degree-project

./: README.md  main.py  pyproject.toml
docs/: architecture.md  mission.md  requirements.md  roadmap.md
papers/: papers.json
src/master_degree_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/notebooks/: 01-frames-brightness-analysis.ipynb  01-frames-brightness.ipynb
src/notebooks/utils/: utils.py
