[project]
name = "master-degree-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.0.3",
]
lint = [
    "ruff>=0.15.17",
]
